--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    width: 66%;
     align-self: center;
     background-color: #333;
     color: #0f0;
@@ -153,13 +152,14 @@
             .summary, .btn-container, .main-content, .section, .terminal-popup, .command-guidelines {
                 max-width: 100%;
                 margin: 10px auto;
-                padding: 15px;
+                
             }
 
             h1, h2, h3 {
                 font-size: 1.3em;
             }
         }
+        
     </style>
 </head>
 <body>
@@ -171,7 +171,10 @@
 
 <div class="main-content">
  <div class="summary">
-    <h1>Shreyash Pawar</h1>
+   <h1>
+    <i class="fas fa-code"></i> Shreyash Pawar
+</h1>
+
     <h2>Full Stack Developer</h2>
     <p><strong>Expertise:</strong> Spring Boot | Angular | React | Node.js | MongoDB | MySQL | HTML | CSS | JavaScript</p>
     <p>
@@ -397,4 +400,3 @@ if (command === "introduce yourself") {
 
 </body>
 </html>
-
